--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
              <li><a href = "./zadania/baba_z13.html" target="strony">Zadanie 13 </a></li>
              <li><a href = "./zadania/baba_z14.html" target="strony">Zadanie 14 </a></li>
              <li><a href = "./zadania/baba_z15.html" target="strony">Zadanie 15 </a></li>
+             <li><a href = "./zadania/baba_z16.html" target="strony">Zadanie 16 </a></li>
+             <li><a href = "./zadania/baba_z17_1.html" target="strony">Zadanie 17_1 </a></li>
+             <li><a href = "./zadania/baba_z17_2.html" target="strony">Zadanie 17_2 </a></li>
+             <li><a href = "./zadania/baba_z18.html" target="strony">Zadanie 18 </a></li>
+             <li><a href = "./zadania/baba_z19.html" target="strony">Zadanie 19 </a></li>
+             <li><a href = "./zadania/baba_z20.html" target="strony">Zadanie 20 </a></li>
+             <li><a href = "./zadania/baba_z21.html" target="strony">Zadanie 21 </a></li>
+             <li><a href = "./zadania/baba_z22.html" target="strony">Zadanie 22 </a></li>
+             <li><a href = "./zadania/baba_z23.html" target="strony">Zadanie 23 </a></li>
 </td>
 </ol>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -46,6 +55,13 @@
 <P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z5_4_kod.html" target="strony"><li>Z5_4</li></a>
 <P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z13_kod.html" target="strony"><li>Z13</li></a>
 <P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z15_kod.html" target="strony"><li>Z15</li></a>
+<P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z17_1_kod.html" target="strony"><li>Z17_1</li></a>
+<P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z17_2_kod.html" target="strony"><li>Z17_2</li></a>
+<P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z18_kod.html" target="strony"><li>Z18</li></a>
+<P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z19_kod.html" target="strony"><li>Z19</li></a>
+<P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z22_kod.html" target="strony"><li>Z22</li></a>   
+<P class="blocktext"><font face ="Arial"><a href = "./zadania/baba_z23_kod.html" target="strony"><li>Z23</li></a>   
+        
 </ol>
 </tr>
 </table>
